client: check the xlists in ~MetaSession()

This will crash the clients more gracefully instead of in ~xlist(),
and this will be easier to debug the root cause and get to know
exactly which list is not empty.

Fixes: https://tracker.ceph.com/issues/56698
Signed-off-by: Xiubo Li <xiubli@redhat.com>
(cherry picked from commit 687d4b77e5615e4a76da862c1286eb1d6bb9f559)